apps/uptime-kuma/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uptime-kuma
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
