apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/hostname: "uptime-kuma"
    kube-vip.io/loadbalancerIPs: "${LAN_PREFIX}.9"
spec:
  type: LoadBalancer
  selector:
    app: uptime-kuma
  ports:
    - port: 8000
      targetPort: 3001
      protocol: TCP
      name: http
